[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/skills/MagicMissile.gd" type="Script" id=1]
[ext_resource path="res://assets/misc/magic_missile.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.8, 12 )

[node name="MagicMissile" type="Area2D" groups=["Ice"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2.5, 2.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 2 )

[node name="DestroyedTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_MagicMissile_body_entered"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
